fix icon alignment due to previous fix

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -456,6 +456,7 @@ input.Button[type="submit"] {
     text-align: center;
     line-height: 36px;
     vertical-align: middle;
+    padding-top: 0px;
 }
 
 .Button--icon .Button-icon {
